fix: navigation mobile

--- a/frontend/assets/styles/layout/header.scss
+++ b/frontend/assets/styles/layout/header.scss
@@ -26,9 +26,7 @@ header{
     button{
         background: unset;
         border: unset;
-        &.logged__link{
-            font-size: 20px;
-        }
+        font-size: 20px;
     }
 
     nav{
